# lira_analysis

./: .dockerignore  .gitignore  ARTIFACT-APPENDIX.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  OUTPUTS.md  README.md  RESULTS_INDEX.md  attack.py  cli_commands.txt  environment.yml  post_analysis.ipynb  pyproject.toml  requirements-lock.txt  requirements.txt  setup.py  train.py
.github/workflows/: lint.yml  publish.yml  tests.yml
analysis_results/: README.md  __init__.py  agreement.ipynb  analysis_utils.py  compare_attacks.py  latex_utils.py  loss_ratio.csv  metrics.py  plot_benchmark+distribution.ipynb  post_analysis.ipynb  threshold_dist.py  visualization.py  vulnerability_analysis.py
attacks/: __init__.py  lira.py
comprehensive_analysis/: README.md  __init__.py  analysis_utils.py  compose_top_vulnerable.py  comprehensive_analysis.ipynb  loss_ratio.csv  loss_ratio_tpr.ipynb  loss_ratio_tpr.py  metrics.py  plot_benchmark_distribution.ipynb  plot_benchmark_distribution.py  plot_style.py  rank_stability_utils.py  reproducibility.ipynb  reproducibility_analysis.py  run_analysis.py  threshold_distribution.ipynb  threshold_distribution.py
configs/: attack.yaml  attack_config.yaml  config_attack.yaml  config_finetune.yaml  config_train_image.yaml  config_train_tabular.yaml  finetune.yaml  finetune_image_config.yaml  train_image.yaml  train_image_config.yaml  train_tabular.yaml  train_tabular_config.yaml
configs/benchmarks/: README.md  cifar100_aof.yaml  cifar100_baseline.yaml  cifar100_tl.yaml  cifar10_aof.yaml  cifar10_baseline.yaml  cifar10_tl.yaml  gtsrb_baseline.yaml  gtsrb_tl.yaml  purchase100_aof.yaml  purchase100_baseline.yaml
configs/figure_panels/: README.md  figure8_ratios.yaml  figure8_scores.yaml
data/: Readme.md
docs/: README.md  configuration.md  installation.md  quickstart.md
notebooks/: loss_ratio_tpr.ipynb  plot_benchmark+distribution.ipynb  post_analysis.ipynb
scripts/: attack.py  run_benchmark.py  train.py
src/mia_research/: __init__.py
src/mia_research/attacks/: __init__.py  lira.py
src/mia_research/data/: __init__.py
src/mia_research/models/: __init__.py
src/mia_research/scripts/: __init__.py
src/mia_research/training/: __init__.py
src/mia_research/utils/: __init__.py  utils.py
tests/: __init__.py  conftest.py  test_common.py  test_data_utils.py  test_metrics.py  test_models.py  test_pipeline_smoke.py  test_plot_benchmark_distribution.py  test_utils.py
utils/: __init__.py  benchmark_cli.py  cli.py  common.py  config_utils.py  data_utils.py  model_utils.py  numerical_utils.py  path_utils.py  train_utils.py  utils.py
